@@ -1,3 +1,7 @@
+2010-08-13  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/CGI.pm: Added host-based authentication
+
 2010-08-09  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* Updated discovery modules for Net::SNMP 6.0.0 compatibility
